--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "eslint-plugin-react": "7.1.0",
     "extract-text-webpack-plugin": "3.0.0",
     "file-loader": "0.11.2",
+    "firebase-admin": "^5.10.0",
+    "firebase-functions": "^0.8.1",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
