--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-react": "7.1.0",
     "extract-text-webpack-plugin": "3.0.0",
     "file-loader": "0.11.2",
+    "firebase": "^4.11.0",
     "firebase-admin": "^5.10.0",
     "firebase-functions": "^0.8.1",
     "fs-extra": "3.0.1",
