--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "react": "^16.0.0",
     "react-dev-utils": "^4.0.1",
     "react-dom": "^16.0.0",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "react-search-input": "^0.11.3",
     "react-smart-data-table": "^0.5.1",
     "style-loader": "0.18.2",
