--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "firebase-admin": "^5.10.0",
     "firebase-functions": "^0.8.1",
     "fs-extra": "3.0.1",
+    "geolib": "^2.0.24",
     "google-distance-matrix": "^1.1.1",
     "google-maps-react": "^1.1.4",
     "html-webpack-plugin": "2.29.0",
@@ -46,6 +47,10 @@
     "react": "^16.0.0",
     "react-dev-utils": "^4.0.1",
     "react-dom": "^16.0.0",
+    "react-geocode": "0.0.7",
+    "react-geolocated": "^2.3.0",
+    "react-jss": "^8.3.5",
+    "react-responsive-modal": "^2.0.1",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-search-input": "^0.11.3",
