--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "firebase": "^4.11.0",
     "firebase-admin": "^5.10.0",
     "firebase-functions": "^0.8.1",
+    "flexbox-react": "^4.4.0",
     "fs-extra": "3.0.1",
     "geolib": "^2.0.24",
     "google-distance-matrix": "^1.1.1",
