--- a/firebase.json
+++ b/firebase.json
@@ -3,14 +3,7 @@
     "rules": "database.rules.json"
   },
   "hosting": {
-    "public": "public",
-    "headers": [ {
-        "source" : "**",
-        "headers" : [ {
-          "key" : "Access-Control-Allow-Origin",
-          "value" : "*"
-        } ]
-    } ],
+    "public": "build",
     "ignore": [
       "firebase.json",
       "**/.*",
@@ -21,8 +14,11 @@
         "source": "**",
         "destination": "/index.html"
       }
-    ],
-
+    ]
   },
-
+  "functions": {
+    "predeploy": [
+      "npm --prefix \"$RESOURCE_DIR\" run lint"
+    ]
+  }
 }
