--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-geocode": "0.0.7",
     "react-geolocated": "^2.3.0",
     "react-jss": "^8.3.5",
+    "react-polygon": "^0.1.0",
     "react-responsive-modal": "^2.0.1",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
