--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "jest": "20.0.4",
     "material-ui": "^0.20.0",
     "material-ui-search-bar": "^0.4.1",
+    "nvm": "0.0.4",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.6",
